# hpad

./: CMakeLists.txt  README.rst  app.overlay  logs.sh  prj.conf
boards/: reel_board.conf
src/: adafruit_dfu_entry.c  battery.c  battery.h  ble_hid.c  ble_hid.h  bringup.c  bringup.h  bringup_config.h  button.c  button.h  consumer_action_engine.c  consumer_action_engine.h  desktop_ble_consumer_hid.c  desktop_ble_consumer_hid.h  desktop_ble_gatt.c  desktop_ble_gatt.h  desktop_ble_protocol.c  desktop_ble_protocol.h  desktop_ble_transport.c  desktop_ble_transport.h  encoder.c  encoder.h  key_leds.c  key_leds.h  kindle_ble_hid.c  kindle_ble_hid.h  macropad_config.c  macropad_config.h  macropad_keys.c  macropad_keys.h  macropad_mode.c  macropad_mode.h  main.c  radio_esb.c  radio_esb.h  radio_identity.c  radio_identity.h  ssd1306_display.c  status_display.c  status_display.h  (+3 more)
tools/: generate_dfu_menu_main.py
